Added JavaScript functions and more JavaScript notes for writing functions, arrays, for loops

--- a/Index.HTML/index.html
+++ b/Index.HTML/index.html
@@ -204,6 +204,7 @@
       <h2>JavaScript</h2>
       <h3>Background Information</h3>
       <ul>
+        <li><b>Object-Oriented Programing (OOP):</b> a language which applies conditional logic and arrays while coding. This can be applied to other in-demand OOP languages as well</li>
         <li><b>Function:</b> a set of instructions that tells the computer how to preform a task</li>
         <ol>
           <li>Different that a for loop, or conditional statement, because functions do not automatically execute when the JS file (script.js) is run</li>
