Added JavaScript functions, for loops, and if statements along with notes to the JavaScript section of HTML

--- a/Index.HTML/index.html
+++ b/Index.HTML/index.html
@@ -204,7 +204,6 @@
       <h2>JavaScript</h2>
       <h3>Background Information</h3>
       <ul>
-        <li><b>Object-Oriented Programing (OOP):</b> a language which applies conditional logic and arrays while coding. This can be applied to other in-demand OOP languages as well</li>
         <li><b>Function:</b> a set of instructions that tells the computer how to preform a task</li>
         <ol>
           <li>Different that a for loop, or conditional statement, because functions do not automatically execute when the JS file (script.js) is run</li>
@@ -220,6 +219,8 @@
             <li>Used through a function declaration</li>
             <li>Function keyword, the actual word "function" is a prefix to the function declaration</li>
             <li>Code block: where the instructions for defining the function (and what it should do) lives. It is also referred to as the function body</li>
+            <li>A function begins with the word function, similar to var for a variable. Then it is followed by () which will define the parameters of that function.</li>
+            <li>The code that is executed is within curly brackets, similar to for loops and if conditional statements.</li>
             <li><b>Console Method:</b> Steps in the code block are written through a <b>console.log</b></li>
             <li>The word console refers to the test environment that developers use to check out their code</li>
             <li>The second part .log() is a method, which means a set of instructions that can be execurtes by a computer</li>
@@ -289,7 +290,6 @@
       </ul>
       </section>
     </main>
-
     <footer>
       <p>I can code!</p>
     </footer>
