Adding README file to the repo along with HTML notes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <main>
       <section class="card" id="course requirements-section">
+        <br>
         <h2>Course Information</h2>
         <br>
         <h4>Completion Requirements</h4>
@@ -67,6 +68,7 @@
         <br>
       </section>
       <section class="card" id="html-section">
+        <br>
         <h2> HTML</h2>
         <br>
         <h3>Popular Commands for HTML</h3>
@@ -128,6 +130,7 @@
          <br>
       </section>
       <section class="card" id="css-section">
+        <br>
       <h2>CSS</h2>
       <br>
       <h3>Three ways to style a webpage using CSS</h3>
@@ -201,6 +204,7 @@
         <br>
       </section>
       <section class="card" id="git-section">
+        <br>
       <h2>Git</h2>
       <br>
       <h3>Git Functions and Definitions</h3>
@@ -245,12 +249,13 @@
       <br>
       </section>
       <section class="card" id="javascript-section">
+        <br>
       <h2>JavaScript</h2>
       <br>
         <h3>Function: a set of instructions that tells the computer how to preform a task</h3>
         <br>
         <ul>
-          <li>Different that a for loop, or conditional statement, because functions do not automatically execute when the JS file (script.js) is run</li>
+          <li>Different that a <i>for </i>loop, or conditional statement, because functions do not automatically execute when the JS file (script.js) is run</li>
           <li>Must call a function by name in order to execute</li>
           <li>This helps make the code easier to use and replicate/call as many times as needed</li>
           <li>Also allows to control where in the control flow a task is executed, or if it is at all</li>
@@ -290,21 +295,21 @@
         <li> === is a strict equality operator which checks to see if two values are equal and returns to the Boolean result of true or false if the values are not equal</li>
     </ol>
     <br>
-        <h3>Arrays: stores a group of related data in a variable and uses a for loop to preform a task on each piece of data, while only using a few lines of code.</h3>
+        <h3>Arrays: stores a group of related data in a variable and uses a <i>for</i> loop to preform a task on each piece of data, while only using a few lines of code.</h3>
         <br>
         <h4>Coding an Array</h4>
         <br>
         <ol>
         <li>In order to use an array with a single piece of data, the location of the data item within the array is neccessary. This location is identified with a unique number called an index.</li>
         <li>To access an individual index, start with the name of the array, then a pair of square brackets and inside is the number of the index, to see the array in action it is put in the console.log function</li>
-        <li>To preform a for loop a conditional statement like an if or else statement has to be used as well</li>
-        <li>The second half needed for a for loop is the array's length. This determines the amount of times the for loop is repeated until there are no items left in the array.</li>
+        <li>To preform a <i>for</i> loop a conditional statement like an if or else statement has to be used as well</li>
+        <li>The second half needed for a <i>for</i> loop is the array's length. This determines the amount of times the <i>for</i> loop is repeated until there are no items left in the array.</li>
         </ol>
         <br>
         <h3>Three statements in a for loop</h3></li>
         <br>
         <ol>
-          <li>Starting point of a for loop: declare the variable (x) and give it a value of 0 (all first indices begin with 0)</li>
+          <li>Starting point of a <i>for</i> loop: declare the variable (x) and give it a value of 0 (all first indices begin with 0)</li>
           <li>Conditon of a for loop: as long as the number in the variable x is less than the length of the array, the loop will continue running. This will allow the loop to execute one time for each array. To do this, we use the <b>.length</b> property within our array.</li>
           <li>The final statement: allows the array to reiterate over each item. To show the increse of the indices by 1, use the shortcut x++. This allows the code to loop while increasing by 1, without having to type all the console.logs</li>
         </ol>
@@ -320,7 +325,7 @@
         <li><b>Else if:</b> a different conditional statement that can be used if the second contion is truthy</li>
         <li><b>Loops:</b> allow for indices to be stated without having to list them all within a console log</li>
         <li><b>Index:</b> Each piece of a data's location number can access the individual data inside the array. JavaScript and many other programming languages have a 0 index and are sequencial following the 0. Meaning the data index will begin with the number 0, then 1, 2, 3...</li>
-        <li><b>for loops:</b> uses predictable pattern of indices to preform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+        <li><b><i>for</i> loops:</b> uses predictable pattern of indices to preform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
         <li><b>Browser Application Programming Interfaces (API's):</b> provide functionality such as: dynamically creating HTML and setting CSS styles; collecting and manipulating a video stream from a user's webcam, or generating 3D graphics and audio samples</li>
         <li><b>Third-party API's:</b> allow developers to incorporate functionality in sites from other content providers, such as Twitter or Facebook</li>
         <li><b>Third-party frameworks and libraries:</b> can apply to HTML to accelerate the work of building sites and applications</li>
@@ -333,9 +338,10 @@
         <li><b>Strings:</b> include all the topics contained in quotation marks, followed by a semicolon</li>
         <li><b>Function Example:</b> stacking dishes, fancy plates on top shelf, regular plates on bottom shelf...else if its a bowl, stack ontop regular plates on bottom shelf</li>
         <li>A computer will finish all conditonal statements listed, evaluating if it is truth or falsy</li>
-        <li><b>For loop example broken down: </b>for(var x=0; x < shapes.length; x++) {console.log(shapes[x]);}</li>
+        <li><b>Deploying:</b> adding a URL to the webpage to make it "live". Typically done with the README file and a separate software program (ie.GitHubPages)</li>
+        <li><b><i>For</i> loop example broken down: </b>for(var x=0; x < shapes.length; x++) {console.log(shapes[x]);}</li>
         <ol>
-            <li><b>for:</b> indicates the for loop</li>
+            <li><b><i>for</i>:</b> indicates the <i>for</i> loop</li>
             <li><b>var:</b> indicates the variable function</li>
             <li><b>x:</b> indicates each index or indices</li>
             <li><b>shapes:</b> indicates the array</li>
